--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.9.2",
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
+    "rxjs": "^7.8.1",
     "svelte": "^4.2.17",
     "svelte-loading-spinners": "^0.3.6",
     "svelte-radix": "^1.1.0",
